@@ -7,7 +7,10 @@ version 1.3.2
 - Help files: include menu-path information in the GUI help file as
   well as the script commands help
 - Provide a mechanism for retrieving the value and/or p-value from
-  the last statistical test performed
+  the last statistical test performed (via the special variables
+  "$test" and "$pvalue" in genr)
+- "label" command: if only a varname is given, print the variable's
+   current label, if any
 
 01/19/2005 version 1.3.1
 - Add new dataset structure "wizard" in place of the old dialogs
